--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.jpa.generate-ddl=true
 spring.datasource.url = jdbc:postgresql://localhost:5432/springdb
 spring.datasource.username = postgres
 spring.datasource.password = password
-upload.path = ./uploadedVideos
 spring.servlet.multipart.max-file-size=10MB
+aws.local.endpoint=http://localhost:4566
