--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
-spring.datasource.url = jdbc:postgresql://postgres:5432/springdb
+spring.datasource.url = jdbc:postgresql://localhost:5432/springdb
 spring.datasource.username = postgres
 spring.datasource.password = password
 spring.servlet.multipart.max-file-size=10MB
