--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.url = ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432
 spring.datasource.username = postgres
 spring.datasource.password = password
 spring.servlet.multipart.max-file-size=10MB
-
+aws.accessKeyId=123
+aws.secretKey=xyz
