--- a/dockertest/docker-compose.yml
+++ b/dockertest/docker-compose.yml
@@ -1,10 +1,12 @@
 version: "3.3"
-
+networks:
+  backend:
+  frontend:
 services:
   localstack:
     container_name: "${LOCALSTACK_DOCKER_NAME-localstack}"
     image: localstack/localstack
-    network_mode: bridge
+    hostname: lockstack
     ports:
       - "127.0.0.1:53:53"                # only required for Pro (DNS)
       - "127.0.0.1:53:53/udp"            # only required for Pro (DNS)
@@ -19,13 +21,46 @@ services:
       - LOCALSTACK_API_KEY=${LOCALSTACK_API_KEY-}  # only required for Pro
       - HOST_TMP_FOLDER=${TMPDIR:-/tmp/}localstack
       - DOCKER_HOST=unix:///var/run/docker.sock
+      - HOSTNAME_EXTERNAL=lockstack
     volumes:
       - "${TMPDIR:-/tmp}/localstack:/tmp/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
-  server:
-    build: ./dockerfiles/Server/
+    networks:
+     - backend
+     - frontend
+  postgres:
+    image: postgres:13.3
+    environment:
+      POSTGRES_DB: springdb
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+    networks:
+     - backend
+  client:
+    build: ./dockerfiles/Client/
     ports:
-      - "127.0.0.1:8000:8000"
       - "127.0.0.1:3000:3000"
     depends_on:
       - localstack
+    networks:
+     - backend
+     - frontend
+  server:
+    build: ./dockerfiles/Server/
+    ports:
+      - "127.0.0.1:8080:8080"
+    depends_on:
+      - postgres
+      - localstack
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/springdb
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=password
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      - AWS_ACCESS_KEY_ID=123
+      - AWS_SECRET_ACCESS_KEY=xyz
+    links:
+     - localstack
+    networks:
+     - backend
+     - frontend
