--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,6 +12,7 @@ spring:
   servlet:
     multipart:
       max-file-size: 1024MB
+      max-request-size: 1024MB
 aws:
   accessKeyId: 123
   secretAccessKey: xyz
